<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="目录"
            android:id="@+id/input_dir"
            android:layout_weight="1"/>

        <Button
            android:text="@string/enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enter"
            android:layout_weight="5"
/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="选择:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="0"/>

        <TextView
            android:text="_____"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cur_dir"
            android:layout_weight="8"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <TextView
            android:text="time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/songdata"
            android:layout_weight="1"/>

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekbar"
            android:layout_weight="4"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prev"
            android:layout_weight="1"/>

        <Button
            android:text="@string/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playstop"
            android:layout_weight="1"/>

        <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next"
            android:layout_weight="1"/>

        <Button
            android:text="@string/volumeup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vdown"
            android:layout_weight="1"/>

        <Button
            android:text="@string/volumedown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vup"
            android:layout_weight="1"/>

        <Button
            android:text="@string/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stop"
            android:layout_weight="1"/>

        <Button
            android:text="@string/addsong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addsong"
            android:layout_weight="1"/>


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/filelist_recycler_view2">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <Button
            android:text="@string/clearall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clearall"
            android:layout_weight="1"/>

        <Button
            android:text="@string/moveup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/moveup"
            android:layout_weight="1"/>

        <Button
            android:text="@string/movedown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movedown"
            android:layout_weight="1"/>

        <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/savedb"
        android:layout_weight="1"/>

        <Button
            android:text="@string/mylovesong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mylovesong"
            android:layout_weight="1"/>

        <Button
            android:text="@string/addall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addall"
            android:layout_weight="1"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/song_list_recycler_view">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>